--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,1 +1,137 @@
-/* No CSS *//*# sourceMappingURL=nav.css.map */
+.nav {
+  margin: 20px 75px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__hamburger {
+  width: 30px;
+  cursor: pointer;
+  display: none;
+}
+
+.nav__logo {
+  cursor: pointer;
+}
+
+.nav__btn {
+  background-color: #fa5757;
+  text-transform: uppercase;
+  color: white;
+  border: none;
+  padding: 10px 30px;
+  font-size: 14px;
+  border-radius: 5px;
+  margin: 0 40px;
+  -webkit-box-shadow: 0 0 9px 2px rgba(128, 128, 128, 0.185);
+          box-shadow: 0 0 9px 2px rgba(128, 128, 128, 0.185);
+  cursor: pointer;
+}
+
+@media screen and (max-width: 930px) {
+  .nav {
+    margin: 20px;
+  }
+}
+
+@media screen and (max-width: 772px) {
+  .nav__list {
+    display: none;
+  }
+  .nav__btn {
+    display: none;
+  }
+  .nav__hamburger {
+    display: block;
+  }
+}
+
+.mob-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px;
+  width: 90%;
+}
+
+.mob-list li {
+  list-style: none;
+  text-align: center;
+  padding: 25px 0;
+  color: white;
+  border-top: 1px solid rgba(128, 128, 128, 0.795);
+  text-transform: uppercase;
+  font-weight: 300;
+  width: 90%;
+  font-size: 26px;
+  letter-spacing: 3px;
+}
+
+.mob-menu {
+  margin: 0;
+  top: 0;
+  position: absolute;
+  z-index: 2;
+  background-color: rgba(4, 10, 43, 0.836);
+  height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 40px 0 0 0;
+}
+
+.mob-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 90%;
+}
+
+.mob-header img {
+  color: white;
+  -webkit-filter: brightness(0.9);
+          filter: brightness(0.9);
+}
+
+.mob-nav__btn {
+  padding: 14px 0;
+  width: 100%;
+  font-size: 22px;
+  background: none;
+  border: 3px solid white;
+  outline: none;
+  border-radius: 8px;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 3.5px;
+  font-weight: 600;
+}
+/*# sourceMappingURL=nav.css.map */
