--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -21,6 +21,25 @@
   cursor: pointer;
 }
 
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 6;
+      -ms-flex: 6;
+          flex: 6;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.nav__list li {
+  list-style: none;
+  text-transform: uppercase;
+  margin: 0 22px;
+  cursor: pointer;
+}
+
 .nav__btn {
   background-color: #fa5757;
   text-transform: uppercase;
@@ -86,7 +105,7 @@
   top: 0;
   position: absolute;
   z-index: 2;
-  background-color: rgba(4, 10, 43, 0.836);
+  background-color: rgba(4, 10, 43, 0.856);
   height: 100vh;
   width: 100vw;
   display: -webkit-box;
