--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,3 +1,4 @@
+
 .nav{
     margin: 20px 75px;
     display: flex;
@@ -72,6 +73,7 @@
         width: 90%;
         font-size: 26px;
         letter-spacing: 3px;
+        cursor: pointer;
     }
 }
 .mob-menu{
@@ -85,8 +87,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 0 0 0;
-   
+    padding: 15px 0 0 0;
+    
 }
 .mob-header{
     display: flex;
@@ -95,7 +97,7 @@
     width: 90%;
     & img{
         color: white;
-        filter: brightness(.9);
+        cursor: pointer;
     }
 }
 .mob-nav__btn{
@@ -104,10 +106,28 @@
     font-size: 22px;
     background: none;
     border: 3px solid white;
+    cursor: pointer;
     outline: none;
     border-radius: 8px;
     color: white;
     text-transform: uppercase;
     letter-spacing: 3.5px;
     font-weight: 600;
+}
+.mob-icons{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    & img{
+        margin: 15px;
+        width: 40px;
+        cursor: pointer;
+    }
+}
+
+.logomb{
+    width: 150px;
+}
+.close{
+    width: 35px;
 }
