--- a/src/components/showcase/showcase.scss
+++ b/src/components/showcase/showcase.scss
@@ -1,5 +1,8 @@
 .showcase{
     padding: 40px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     &__illustration{
         & img{
             width: 100%;
@@ -8,6 +11,7 @@
     }
     &__text{
         text-align: center;
+        max-width: 600px;
         & h3{
             text-transform: capitalize;
             font-size: 2.2rem;
@@ -24,11 +28,53 @@
             padding: 22px 30px;
             font-weight: 500;
             margin: 5px;
-            border-radius: 8px;
+            border-radius: 5px;
             border: none;
             background-color: royalblue;
             color: white;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            &:nth-of-type(2){
+                background-color: rgba(221, 221, 221, 0.644);
+                color: black;
+            }
+            &:hover{
+                transform: scale(105%);
+            }
         }
     }
 }
 
+@media screen and (min-width: 960px) {
+   .showcase{
+       margin:40px 20px;
+       flex-direction: row;
+       justify-content: space-between;
+       &__text{
+           width: 50%;
+           order: 1;
+           text-align: left;
+           & h3{
+               font-size: 3.5rem;
+               line-height: 3.5rem;
+               margin: 5px 0;
+               font-weight: 500;
+           }
+           & p{
+               font-size: 1.2rem;
+           }
+        }
+        &__illustration{
+            display: flex;
+            justify-content: flex-end;
+            margin: 5px 0;
+           width: 50%;
+           order: 2;
+       }
+   } 
+}
+@media screen and (min-width:1066px){
+    .showcase{
+        margin: 50px 80px;
+    }
+}
