--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -55,7 +55,7 @@
   padding: 10px 30px;
   font-size: 14px;
   border-radius: 5px;
-  border: 1px solid red;
+  border: 1px solid #fa5757;
   margin: 0 40px;
   -webkit-box-shadow: 0 0 9px 2px rgba(128, 128, 128, 0.185);
           box-shadow: 0 0 9px 2px rgba(128, 128, 128, 0.185);
