--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -35,7 +35,7 @@
         padding: 10px 30px;
         font-size: 14px;
         border-radius: 5px;
-        border: 1px solid red;
+        border: 1px solid hsl(0, 94%, 66%);
         margin: 0 40px;
         box-shadow: 0 0 9px 2px rgba(128, 128, 128, 0.185);
         cursor: pointer;
