--- a/src/components/showcase/showcase.css
+++ b/src/components/showcase/showcase.css
@@ -26,11 +26,13 @@
   text-transform: capitalize;
   font-size: 2.2rem;
   line-height: 42px;
+  color: #252b46;
 }
 
 .showcase__text p {
   font-size: 1.2rem;
   line-height: 30px;
+  color: #9194a1;
 }
 
 .showcase__btns button {
@@ -41,7 +43,7 @@
   border-radius: 5px;
   border: none;
   background-color: royalblue;
-  color: white;
+  color: #e9eaec;
   cursor: pointer;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
@@ -49,7 +51,7 @@
 
 .showcase__btns button:nth-of-type(2) {
   background-color: rgba(221, 221, 221, 0.644);
-  color: black;
+  color: #3f455f;
 }
 
 .showcase__btns button:hover {
