--- a/src/components/showcase/showcase.scss
+++ b/src/components/showcase/showcase.scss
@@ -16,10 +16,12 @@
             text-transform: capitalize;
             font-size: 2.2rem;
             line-height: 42px;
+            color: hsl(229, 31%, 21%);
         }
         & p{
             font-size: 1.2rem;
             line-height: 30px;
+            color: hsl(229, 8%, 60%);
         }
     }
     &__btns{
@@ -31,12 +33,13 @@
             border-radius: 5px;
             border: none;
             background-color: royalblue;
-            color: white;
+            color: rgb(233, 234, 236);
             cursor: pointer;
             transition: all 0.2s ease;
             &:nth-of-type(2){
                 background-color: rgba(221, 221, 221, 0.644);
-                color: black;
+                color: hsl(229, 20%, 31%);
+
             }
             &:hover{
                 transform: scale(105%);
