correcting feature height

--- a/src/components/features/features.scss
+++ b/src/components/features/features.scss
@@ -12,6 +12,7 @@
     }
     &__feature{
         margin: 20px 0;
+        min-height: 435px;
         & img{
             width: 100%;
             max-width: 500px;
