--- a/src/components/download/download.css
+++ b/src/components/download/download.css
@@ -1,1 +1,98 @@
-/* No CSS *//*# sourceMappingURL=download.css.map */
+.download {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 40px 30px;
+  text-align: center;
+  margin: 60px 0;
+}
+
+.download .heading-para {
+  max-width: 600px;
+  font-size: 1.2rem;
+  line-height: 28px;
+  margin: 0;
+}
+
+.download__cards {
+  margin: 40px 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.download__card {
+  max-width: 310px;
+  width: 100%;
+  padding: 50px 20px;
+  border-radius: 10px;
+  margin: 20px 0;
+  -webkit-box-shadow: 0 10px 22px 3px rgba(65, 105, 225, 0.144);
+          box-shadow: 0 10px 22px 3px rgba(65, 105, 225, 0.144);
+}
+
+@media screen and (min-width: 390px) {
+  .download__card {
+    margin: 20px;
+  }
+}
+
+.download__card img {
+  margin: 30px;
+}
+
+.download__card p {
+  text-align: center;
+  font-size: 0.9rem;
+  line-height: 28px;
+  margin: 0;
+}
+
+.download__card h5 {
+  margin: 8px 0;
+  font-size: 1.2rem;
+}
+
+.download__card button {
+  font-size: 16px;
+  padding: 18px 20px;
+  font-weight: 600;
+  margin: 5px;
+  border-radius: 5px;
+  border: none;
+  background-color: royalblue;
+  color: #e9eaec;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.download__card button:hover {
+  -webkit-transform: scale(105%);
+          transform: scale(105%);
+}
+
+@media screen and (min-width: 1230px) {
+  .download section:nth-of-type(2) {
+    position: relative;
+    top: 40px;
+  }
+  .download section:nth-of-type(3) {
+    position: relative;
+    top: 80px;
+  }
+}
+/*# sourceMappingURL=download.css.map */
