--- a/src/components/features/features.scss
+++ b/src/components/features/features.scss
@@ -4,6 +4,7 @@
     align-items: center;
     padding: 40px 30px;
     text-align: center;
+    margin: 60px 0;
     & p{
         font-size: 1.2rem;
         line-height: 28px;
