--- a/src/components/download/download.css
+++ b/src/components/download/download.css
@@ -14,6 +14,12 @@
   margin: 60px 0;
 }
 
+.download__line {
+  height: 5px;
+  margin: 5px 0;
+  background-color: royalblue;
+}
+
 .download .heading-para {
   max-width: 600px;
   font-size: 1.2rem;
@@ -36,6 +42,7 @@
 
 .download__card {
   max-width: 310px;
+  overflow-x: hidden;
   width: 100%;
   padding: 50px 20px;
   border-radius: 10px;
@@ -94,5 +101,15 @@
     position: relative;
     top: 80px;
   }
+}
+
+hr {
+  margin: 20px 0;
+  position: relative;
+  right: 0;
+  left: -30px;
+  width: 120%;
+  border-top: 8px dotted rgba(18, 25, 80, 0.041);
+  border-bottom: none;
 }
 /*# sourceMappingURL=download.css.map */
