--- a/src/components/newsletter/news.css
+++ b/src/components/newsletter/news.css
@@ -11,7 +11,7 @@
           align-items: center;
   padding: 40px 30px;
   text-align: center;
-  margin: 60px 0;
+  margin: 60px 0 0;
   color: white;
   background-color: #5368df;
 }
