--- a/src/components/newsletter/news.scss
+++ b/src/components/newsletter/news.scss
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 40px 30px;
     text-align: center;
-    margin: 60px 0;
+    margin: 60px 0 0;
     color: white;
     background-color: hsl(231, 69%, 60%);
     & h3{
