--- a/src/components/faq/faq.scss
+++ b/src/components/faq/faq.scss
@@ -33,10 +33,11 @@
         }
         & p{
             text-align: left;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             line-height: 28px;
             display: block;
             transition: all 0.3s ease;
+            margin-bottom: 44px;
         }
     }
 }
