--- a/src/components/BlueCutton/btn.scss
+++ b/src/components/BlueCutton/btn.scss
@@ -5,11 +5,9 @@
     margin: 5px;
     border-radius: 5px;
     border: none;
-    background-color: royalblue;
-    color: rgb(233, 234, 236);
     cursor: pointer;
     transition: all 0.2s ease;
     &:hover{
-        transform: scale(105%);
+        transform: translateY(-5px);
     }
 }
