--- a/src/components/newsletter/news.css
+++ b/src/components/newsletter/news.css
@@ -54,9 +54,11 @@
 }
 
 .news input {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 16px;
   border-radius: 3px;
-  padding: 12px 5px;
+  padding: 12px 10px;
   margin: 15px;
   outline: none;
   border: none;
@@ -78,11 +80,19 @@
   font-size: 16px;
   padding: 12px 5px;
   font-family: inherit;
-  width: 103%;
+  cursor: pointer;
+  width: 100%;
   font-weight: 500;
   color: white;
   border-radius: 3px;
   background-color: #fa5757;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.news button:hover {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
 }
 
 @media screen and (min-width: 590px) {
