--- a/src/components/newsletter/news.scss
+++ b/src/components/newsletter/news.scss
@@ -30,9 +30,10 @@
         }
     }
     & input{
+        box-sizing: border-box;
         font-size: 16px;
         border-radius: 3px;
-        padding: 12px 5px;
+        padding: 12px 10px;
         margin: 15px;
         outline: none;
         border: none;
@@ -52,14 +53,18 @@
         font-size: 16px;
         padding: 12px 5px;
         font-family: inherit;
-        width: 103%;
+        cursor: pointer;
+        width: 100%;
         font-weight: 500;
         color: white;
         border-radius: 3px;
         background-color: hsl(0, 94%, 66%);
+        transition: all 0.2s ease;
+        &:hover{
+            transform: translateY(-5px);
+        }
         @media screen and (min-width: 590px) {
             width: 30%;
-            
         }
     }
     
