--- a/src/components/features/features.scss
+++ b/src/components/features/features.scss
@@ -33,7 +33,7 @@
         display: flex;
         max-width: 600px;
         flex-direction: column;
-        margin: 50px 0;
+        margin: 20px 0 10px 0;
         width: 100%;
         & h5{
             font-size: 20px;
