--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -24,9 +24,15 @@
 .faq__question {
   max-width: 640px;
   width: 100%;
+  cursor: pointer;
   margin-bottom: -1px;
   border-bottom: 1px solid rgba(6, 20, 61, 0.363);
   border-top: 1px solid rgba(6, 20, 61, 0.363);
+}
+
+.faq__question:hover h4, .faq__question:hover img {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
 }
 
 .faq__question .q {
@@ -44,12 +50,16 @@
 .faq__question .q img {
   width: 30px;
   height: 30px;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 
 .faq__question h4 {
   font-size: 1.3rem;
   font-weight: 400;
   text-align: left;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .faq__question p {
