--- a/src/components/features/features.css
+++ b/src/components/features/features.css
@@ -51,7 +51,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 50px 0;
+  margin: 20px 0 10px 0;
   width: 100%;
 }
 
