--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -72,12 +72,14 @@
     align-items: center;
     padding: 10px;
     width: 90%;
+    opacity: 0;
+    transform: translateY(-20px);
     & li{
         list-style: none;
         text-align: center;
         padding: 25px 0;
-        color: white;
-        border-top: 1px solid rgba(128, 128, 128, 0.795);
+        color: rgb(217, 214, 228);
+        border-top: 1px solid rgba(217, 214, 228, 0.274);
         text-transform: uppercase;
         font-weight: 300;
         width: 90%;
@@ -95,7 +97,7 @@
     top: 0;
     position: absolute;
     z-index: 2;
-    background-color: rgba(4, 10, 43, 0.911);
+    background-color: rgba(11, 18, 56, 0.966);
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -110,7 +112,6 @@
     margin: 20px 0;
     width: 90%;
     & img{
-        color: white;
         cursor: pointer;
     }
 }
@@ -119,11 +120,11 @@
     width: 100%;
     font-size: 22px;
     background: none;
-    border: 3px solid white;
+    border: 3px solid rgb(217, 214, 228);
     cursor: pointer;
     outline: none;
     border-radius: 8px;
-    color: white;
+    color: rgb(217, 214, 228);
     text-transform: uppercase;
     letter-spacing: 3.5px;
     font-weight: 600;
@@ -139,6 +140,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 0;
+    transform: translateY(-10px);
     & img{
         margin: 15px;
         width: 40px;
