made links unselectable

--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -60,6 +60,16 @@
   text-align: left;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
 }
 
 .faq__question p {
