--- a/src/components/features/features.scss
+++ b/src/components/features/features.scss
@@ -47,6 +47,12 @@
             border-top: 1px solid rgba(128, 128, 128, 0.459);
             border-bottom: 1px solid rgba(128, 128, 128, 0.459);
             border-collapse: collapse;
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+            -moz-user-select: none; /* Old versions of Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
         }
     }
 }
