--- a/src/components/faq/faq.scss
+++ b/src/components/faq/faq.scss
@@ -38,6 +38,12 @@
             font-weight: 400;
             text-align: left;
             transition: all 0.3s ease;
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+            -moz-user-select: none; /* Old versions of Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
             
         }
         & p{
