--- a/src/components/features/features.css
+++ b/src/components/features/features.css
@@ -67,6 +67,16 @@
   border-top: 1px solid rgba(128, 128, 128, 0.459);
   border-bottom: 1px solid rgba(128, 128, 128, 0.459);
   border-collapse: collapse;
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
 }
 
 @media screen and (min-width: 960px) {
