--- a/src/components/showcase/showcase.css
+++ b/src/components/showcase/showcase.css
@@ -25,6 +25,7 @@
 .showcase__text h3 {
   text-transform: capitalize;
   font-size: 2.2rem;
+  margin-top: 0;
   line-height: 42px;
   color: #252b46;
 }
