--- a/src/components/showcase/showcase.scss
+++ b/src/components/showcase/showcase.scss
@@ -15,6 +15,7 @@
         & h3{
             text-transform: capitalize;
             font-size: 2.2rem;
+            margin-top: 0;
             line-height: 42px;
             color: hsl(229, 31%, 21%);
         }
