--- a/src/components/showcase/showcase.css
+++ b/src/components/showcase/showcase.css
@@ -26,6 +26,7 @@
   text-transform: capitalize;
   font-size: 2.2rem;
   margin-top: 0;
+  margin-bottom: 5px;
   line-height: 42px;
   color: #252b46;
 }
