--- a/src/components/showcase/showcase.scss
+++ b/src/components/showcase/showcase.scss
@@ -16,6 +16,7 @@
             text-transform: capitalize;
             font-size: 2.2rem;
             margin-top: 0;
+            margin-bottom: 5px;
             line-height: 42px;
             color: hsl(229, 31%, 21%);
         }
