--- a/src/components/features/features.scss
+++ b/src/components/features/features.scss
@@ -73,6 +73,7 @@
             text-align: left;
             justify-content: center;
             align-items: center;
+            opacity: 0;
             & img{
                 margin-bottom: 0;
             }
