--- a/src/components/showcase/showcase.scss
+++ b/src/components/showcase/showcase.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    opacity: 0;
     &__illustration{
         & img{
             width: 100%;
