fixed height of showcase

--- a/src/components/showcase/showcase.scss
+++ b/src/components/showcase/showcase.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     opacity: 0;
+    height: 100vh;
     &__illustration{
         & img{
             width: 100%;
