--- a/src/components/showcase/showcase.css
+++ b/src/components/showcase/showcase.css
@@ -11,6 +11,7 @@
       -ms-flex-align: center;
           align-items: center;
   opacity: 0;
+  height: 100vh;
 }
 
 .showcase__illustration img {
