--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,5 +1,6 @@
 
 .nav{
+    opacity: 0;
     margin: 20px 75px;
     display: flex;
     justify-content: space-between;
@@ -107,6 +108,7 @@
 }
 
 .mob-menu{
+    opacity: 0;
     margin: 0;
     top: 0;
     position: absolute;
