--- a/src/components/newsletter/news.scss
+++ b/src/components/newsletter/news.scss
@@ -7,6 +7,7 @@
     margin: 60px 0 0;
     color: white;
     background-color: hsl(231, 69%, 60%);
+
     & h3{
         font-size: 14px;
         text-transform: uppercase;
@@ -30,6 +31,7 @@
         }
     }
     & input{
+        z-index: 11;
         box-sizing: border-box;
         font-size: 16px;
         border-radius: 3px;
