--- a/src/components/features/features.scss
+++ b/src/components/features/features.scss
@@ -13,6 +13,7 @@
     }
     &__feature{
         margin: 20px 0;
+        opacity: 0;
         min-height: 435px;
         & img{
             width: 100%;
