--- a/src/components/newsletter/news.scss
+++ b/src/components/newsletter/news.scss
@@ -58,7 +58,7 @@
         cursor: pointer;
         width: 100%;
         font-weight: 500;
-        color: white;
+        color: rgb(255, 255, 255);
         border-radius: 3px;
         background-color: hsl(0, 94%, 66%);
         transition: all 0.3s ease;
