--- a/src/components/BlueCutton/btn.scss
+++ b/src/components/BlueCutton/btn.scss
@@ -7,6 +7,7 @@
     border: none;
     cursor: pointer;
     transition: all 0.2s ease;
+    overflow-x: hidden;
     &:hover{
         transform: translateY(-5px);
     }
