--- a/src/components/faq/faq.scss
+++ b/src/components/faq/faq.scss
@@ -5,6 +5,7 @@
     padding: 40px 30px;
     text-align: center;
     margin: 60px 0;
+    overflow-x: hidden;
     & .heading-para{
         max-width: 600px;
         font-size: 1.2rem;
