--- a/src/components/features/features.scss
+++ b/src/components/features/features.scss
@@ -5,6 +5,7 @@
     padding: 40px 30px;
     text-align: center;
     margin: 60px 0;
+    overflow-x: hidden;
     & p{
         font-size: 1.1rem;
         line-height: 28px;
