--- a/src/components/newsletter/news.css
+++ b/src/components/newsletter/news.css
@@ -11,6 +11,7 @@
           align-items: center;
   padding: 80px 30px;
   text-align: center;
+  overflow-x: hidden;
   margin: 60px 0 0;
   color: white;
   background-color: #5368df;
