--- a/src/components/newsletter/news.scss
+++ b/src/components/newsletter/news.scss
@@ -4,10 +4,10 @@
     align-items: center;
     padding: 80px 30px;
     text-align: center;
+    overflow-x: hidden;
     margin: 60px 0 0;
     color: white;
     background-color: hsl(231, 69%, 60%);
-
     & h3{
         font-size: 14px;
         text-transform: uppercase;
