--- a/src/components/showcase/showcase.scss
+++ b/src/components/showcase/showcase.scss
@@ -5,6 +5,7 @@
     align-items: center;
     opacity: 0;
     height: 100vh;
+    overflow-x: hidden;
     &__illustration{
         & img{
             width: 100%;
