--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -58,6 +58,7 @@
 .faq__question h4 {
   font-size: 1.3rem;
   font-weight: 400;
+  color: #605b75;
   text-align: left;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
