--- a/src/components/faq/faq.scss
+++ b/src/components/faq/faq.scss
@@ -37,6 +37,7 @@
         & h4{
             font-size: 1.3rem;
             font-weight: 400;
+            color: rgb(96, 91, 117);
             text-align: left;
             transition: all 0.3s ease;
             -webkit-touch-callout: none; /* iOS Safari */
