--- a/src/components/faq/faq.scss
+++ b/src/components/faq/faq.scss
@@ -16,6 +16,7 @@
         max-width: 640px;
         width: 100%;
         cursor: pointer;
+        -webkit-tap-highlight-color: transparent;
         &:hover{
             h4, img{
                 transform: translateY(-5px);
@@ -25,6 +26,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            -webkit-tap-highlight-color: transparent;
             & img{
                 width: 30px;
                 height: 30px;
@@ -35,6 +37,7 @@
         border-bottom: 1px solid rgba(6, 20, 61, 0.363);
         border-top: 1px solid rgba(6, 20, 61, 0.363);
         & h4{
+            -webkit-tap-highlight-color: transparent;
             font-size: 1.3rem;
             font-weight: 400;
             color: rgb(96, 91, 117);
@@ -54,7 +57,9 @@
             line-height: 28px;
             display: block;
             transition: all 0.3s ease;
+            -webkit-tap-highlight-color: transparent;
             margin-bottom: 44px;
+            transition: all 1s ease;
         }
     }
 }
