--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -29,6 +29,7 @@
             font-weight: 400;
             cursor: pointer;
             transition: all 0.3s ease;
+            -webkit-tap-highlight-color: transparent;
             -webkit-touch-callout: none; /* iOS Safari */
             -webkit-user-select: none; /* Safari */
             -khtml-user-select: none; /* Konqueror HTML */
