--- a/src/components/features/features.css
+++ b/src/components/features/features.css
@@ -58,6 +58,7 @@
 }
 
 .features__menu h5 {
+  -webkit-tap-highlight-color: transparent;
   font-size: 20px;
   font-weight: 500;
   text-transform: capitalize;
