--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -50,6 +50,7 @@
   cursor: pointer;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
